--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Enter your description here" />
+    <meta name="Description" content="" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>CV MAD</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;700;900&display=swap');
+    </style>
 </head>
 
-<body>
+<body class="bg-gray-heavy">
 
     <!-- HEADER -->
-    <div class="wrapper">
-        <div class="container">
-            <div class="row"></div>
+    <div class="wrapper bg-aqua txt-white">
+        <div class="container-fluid">
+            <div class="row justify-content-end">
+                <div class="col-12 col-md-8 py-5">
+                    <h1 class="fz-header">Dalo Marc-André</h1>
+                    <h2 class="fz-sub-header">Dévelopeur Web Full Stack</h2>
+                </div>
+            </div>
         </div>
     </div>
     <!-- FIN HEADER -->
@@ -25,19 +33,19 @@
 
     <!-- CORPS CURRICULUM -->
     <div class="wrapper">
-        <div class="container">
-            <div class="row">
+        <div class="container-fluid">
+            <div class="row  justify-content-around">
                 <!-- LISTES EDUCATION -->
-                <div class="col-md-8">
+                <div class="col-md-7 bg-gray-light">
                     <div id="presentation">
-                        <h2></h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aut rerum? Dolorem, quidem sequi nihil pariatur necessitatibus et soluta. Laborum, cumque quam dignissimos ab quae itaque nihil in id iure!
+                        <h2 class="fz-title txt-color-blue"> Bonjour !</h2>
+                        <p class="fz-text text-white">
+                            Je me nomme Dalo Marc, <strong>31 ans</strong> avec <strong>6 ans d’expérience</strong> dans le développement web. Très calme, orienté résultats et un excellent chercheur. Je voudrais faire valoir mes connaissances et aptitudes aussi bien intellectuelles que professionnelles sous fond d’efficacité, d’adaptation et de loyauté dans le service.
                         </p>
                     </div>
                     <div id="education">
-                        <h2></h2>
-                        <ul>
+                        <h2 class="fz-title txt-color-blue">EDUCATION</h2>
+                        <ul class="fz-text text-white">
                             <li></li>
                             <li></li>
                             <li></li>
