--- a/index-copy.html
+++ b/index-copy.html
@@ -8,6 +8,7 @@
     <meta name="Description" content="" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>CV</title>
     <style>
@@ -40,11 +41,11 @@
                     <div id="presentation">
                         <h2 class="fz-title txt-color-blue"> Bonjour !</h2>
                         <p class="fz-text text-white">
-                            Je me nomme Dalo Marc, <strong>31 ans</strong> avec <strong>6 ans d’expérience</strong> dans le développement web. Très calme, orienté résultats et un excellent chercheur. Je voudrais faire valoir mes connaissances et aptitudes aussi bien intellectuelles que professionnelles sous fond d’efficacité, d’adaptation et de loyauté dans le service.
+                            Je me nomme N'guessan Linda, <strong>29 ans</strong> avec <strong>2 ans d’expérience</strong> dans le domaine de l'esthétique. Très calme, orientée résultats et une excellente travailleuse. Je voudrais faire valoir mes connaissances et aptitudes aussi bien manuelles que professionnelles sous fond d’efficacité, d’adaptation et de loyauté dans le service.
                         </p>
                     </div>
                     <div id="education">
-                        <h2 class="fz-title txt-color-blue">EDUCATION</h2>
+                        <h2 class="fz-title txt-color-blue">EDUCATION <span class="txt-color-blue"><i class="fa fa-cubes"></i></span></h2>
                         
                         <ul class="fz-text text-white list-unstyled">
                             <li class="font-weight-bold">2013-2014: Admissibilité CAP: Option Esthétique au centre d’Enseignement Professionnel de Port-Bouet (CEP)</li>
@@ -54,7 +55,7 @@
                     </div>
                     <div id="exp_pro">
                         <div class="exp">
-                            <h2 class="fz-title txt-color-blue">EXPERIENCE PROFESSIONNELLE</h2>
+                            <h2 class="fz-title txt-color-blue">EXPERIENCE PROFESSIONNELLE <span class="txt-color-blue"><i class="fa fa-cut"></i></span></h2>
                             <ul class="fz-text text-white list-unstyled">
                                 <li>
                                     <strong>Institut Bawonon, situé aux Rond Point ADO Riviera Bonoumin, Mai 2022 à Septembre 2023</strong>
@@ -82,7 +83,7 @@
                             <!-- <h2></h2> -->
                             <ul class="fz-text text-white list-unstyled">
                                 <li>
-                                    <strong>Commerciale à Elishama Chips 2017-2018</strong>
+                                    <strong>Commerciale Freelance à Elishama Chips de 2018-2022</strong>
                                     
                                 </li>
                                 <li>
@@ -95,7 +96,7 @@
                             <!-- <h2></h2> -->
                             <ul class="fz-text text-white list-unstyled">
                                 <li>
-                                    <strong>Institut Josée Shy'n Beauté, Riviera Attoban</strong>
+                                    <strong>Institut Josée Shy'n Beauté, Riviera Attoban 2017 à 2018</strong>
                                 </li>
                                 <li>
                                     <strong>Esthéticienne Professionnelle Titulaire</strong> et chargée de fournir les prestations suivantes :
@@ -113,14 +114,14 @@
                     </div>
                 </div>
                 <!-- INFOS PERSONNELLES -->
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div id="profil">
-                        <img class="img-fluid" src="img/tof.jpg" alt="">
+                        <img class="img-fluid" src="img/img.jpg" alt="">
                     </div>
-                    <div id="infos-persos" class="bg-gray-light my-1 px-3 pt-3">
+                    <div id="infos-persos" class="bg-gray-light my-1 px-2 pt-1">
                         <ul class="fz-text text-white list-unstyled">
                             <li><span class="txt-color-blue"><i class="fa fa-phone"></i></span> +225 01 03 21 75 13 </li>
-                            <li> <span class="txt-color-blue"><i class="fa fa-home"></i></span>Angré 7eme Tranche, environ de l'Immeuble CGK</li>
+                            <li> <span class="txt-color-blue"><i class="fa fa-home"></i></span>Angré 7eme Tranche, Immeuble CGK</li>
                             <li> <span class="txt-color-blue"><i class="fa fa-envelope"></i></span> lindanguessan69@gmail.com</li>
                         </ul>
                     </div>
@@ -128,33 +129,33 @@
                         <h1 class="text-white pb-1"><strong> Compétences Bases</strong></h1>
                         <div class="progress-bar-group">
                             <div>
-                                <h3 class="txt-white py-1">Soins Visage</h3>
+                                <h3 class="txt-white py-1"> <span class="txt-color-blue"><i class="fa fa-forumbee"></i></span> Soins Visage</h3>
                                 <div class="progress progress-bar-style">
                                     <div class="progress-bar bg-aqua" style="width: 85%" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong></div>
                                 </div>
                             </div>
                             <div>
-                                <h2 class="txt-white py-1">Pédicure / Manucure</h2>
+                                <h2 class="txt-white py-1"> <span class="txt-color-blue"><i class="fa fa-female"></i></span> Pédicure / Manucure</h2>
                                 <div class="progress progress-bar-style">
-                                    <div class="progress-bar bg-aqua" style="width: 70%" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong></div>
+                                    <div class="progress-bar bg-aqua" style="width: 90%" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong></div>
                                 </div>
                             </div>
                             <div>
-                                <h2 class="txt-white py-1">Massage</h2>
+                                <h2 class="txt-white py-1"> <span class="txt-color-blue"><i class="fa fa-envira"></i></span> Massage</h2>
                                 <div class="progress progress-bar-style">
                                     <div class="progress-bar bg-aqua" style="width: 85%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong></div>
                                 </div>
                             </div>
                             <div>
-                                <h2 class="txt-white py-1">Epilation</h2>
+                                <h2 class="txt-white py-1"> <span class="txt-color-blue"><i class="fa fa-fire"></i></span> Epilation</h2>
                                 <div class="progress progress-bar-style">
-                                    <div class="progress-bar bg-aqua" style="width: 80%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong></div>
+                                    <div class="progress-bar bg-aqua" style="width: 75%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong></div>
                                 </div>
                             </div>
                             <div>
-                                <h2 class="txt-white py-1">Soin Anti-Acné</h2>
+                                <h2 class="txt-white py-1"><span class="txt-color-blue"><i class="fas fa-air-freshener"></i></span> Soin Anti-Acné</h2>
                                 <div class="progress progress-bar-style">
-                                    <div class="progress-bar bg-aqua" style="width: 75%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong></div>
+                                    <div class="progress-bar bg-aqua" style="width: 70%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong></div>
                                 </div>
                             </div>
                         </div>
