--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div id="presentation">
                         <h2 class="fz-title txt-color-blue"> Bonjour !</h2>
                         <p class="fz-text text-white">
-                            Je me nomme Dalo Marc, <strong>31 ans</strong> avec <strong>6 ans d’expérience</strong> dans le développement web. Très calme, orienté résultats et un excellent chercheur. Je voudrais faire valoir mes connaissances et aptitudes aussi bien intellectuelles que professionnelles sous fond d’efficacité, d’adaptation et de loyauté dans le service.
+                            Je me nomme Dalo Marc, <strong>31 ans</strong> avec <strong>7 ans d’expérience</strong> dans le développement web. Très calme, orienté résultats et un excellent chercheur. Je voudrais faire valoir mes connaissances et aptitudes aussi bien intellectuelles que professionnelles sous fond d’efficacité, d’adaptation et de loyauté dans le service.
                         </p>
                     </div>
                     <div id="education">
@@ -51,13 +51,14 @@
                             <li class="font-weight-bold">Institut des Technologies d’Abidjan: Brevet de Technicien Supérieur option IDA</li>
                             <li class="font-weight-bold">Institut des Technologies d’Abidjan: 1ere année Brevet de Technicien Supérieur option IDA</li>
                         </ul>
+
                     </div>
                     <div id="exp_pro">
                         <div class="exp">
                             <h2 class="fz-title txt-color-blue">EXPERIENCE PRO</h2>
                             <ul class="fz-text text-white list-unstyled">
                                 <li>
-                                    <strong>SycaPay SAS, situé aux 2 Plateaux vallon, Résidence Valérie de Juillet 2021 à aujourd'hui</strong>
+                                    <strong>SycaPay SAS, situé aux Carrefour CHU, de Juillet 2021 à aujourd'hui</strong>
                                 </li>
                                 <li>
                                     Dev Web chargé de l'exécution des marchés externes de type <strong>Dashboard</strong> et autres applications web, de la maintenance et de l'évolution des applications en interne.
@@ -77,7 +78,7 @@
                                     CRG Pay (lien confidentiel)
                                 </li>
                                 <li>
-                                    Oneci: http://oneci.sycasms.com 
+                                    Oneci: http://syc.rnpp.ci 
                                 </li>
                                 <li>
                                     Référant: M.Zilé au 07 09 23 50 99
@@ -175,6 +176,12 @@
                                 </div>
                             </div>
                             <div>
+                                <h2 class="txt-white py-1">Vue JS</h2>
+                                <div class="progress progress-bar-style">
+                                    <div class="progress-bar bg-aqua" style="width: 40%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>40%</strong></div>
+                                </div>
+                            </div>
+                            <div>
                                 <h2 class="txt-white py-1">Code Igniter</h2>
                                 <div class="progress progress-bar-style">
                                     <div class="progress-bar bg-aqua" style="width: 80%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong></div>
@@ -183,7 +190,7 @@
                             <div>
                                 <h2 class="txt-white py-1">Bootstrap</h2>
                                 <div class="progress progress-bar-style">
-                                    <div class="progress-bar bg-aqua" style="width: 85%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong></div>
+                                    <div class="progress-bar bg-aqua" style="width: 100%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><strong>100%</strong></div>
                                 </div>
                             </div>
                         </div>
